tests/baselines/reference/paramTagNestedWithoutTopLevelObject4.errors.txt
tests/cases/conformance/jsdoc/paramTagNestedWithoutTopLevelObject4.js(2,20): error TS8032: Qualified name 'xyz.bar.p' is not allowed without a leading '@param {object} xyz.bar'.


==== tests/cases/conformance/jsdoc/paramTagNestedWithoutTopLevelObject4.js (1 errors) ====
    /**
     * @param {number} xyz.bar.p
                       ~~~~~~~~~
!!! error TS8032: Qualified name 'xyz.bar.p' is not allowed without a leading '@param {object} xyz.bar'.
     */
    function g(xyz) {
        return xyz.bar.p;
    }